--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人简历</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="resume">
         <h1>个人简历</h1>
@@ -16,7 +18,8 @@
             </div>
             <div class="info-content">
                 <p><strong>姓名：</strong>朱泽恺 <strong>性别：</strong>男 <strong>年龄：</strong>18岁 <strong>籍贯：</strong>重庆</p>
-                <p>我是一个充满激情和创造力的年轻人，热爱编程和运动，尤其享受在篮球场上挥洒汗水的感觉。我性格开朗，善于团队合作，对新技术充满好奇心，喜欢不断学习和挑战自我。未来，我希望能在技术领域深耕，同时保持对生活的热爱。</p>
+                <p>我是一个充满激情和创造力的年轻人，热爱编程和运动，尤其享受在篮球场上挥洒汗水的感觉。我性格开朗，善于团队合作，对新技术充满好奇心，喜欢不断学习和挑战自我。未来，我希望能在技术领域深耕，同时保持对生活的热爱。
+                </p>
             </div>
         </div>
         <div class="hobbies">
@@ -30,4 +33,5 @@
         </div>
     </div>
 </body>
+
 </html>
